kubernetes/infra/configs/kyverno/tests/disallow-default-namespace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-default-namespace
policies:
- ../../cluster-policies/disallow-default-namespace.yaml
resources:
- resources.yaml
results:
- policy: disallow-default-namespace
  kind: Pod
  resources:
  - default/pod-in-default
  result: fail
  isValidatingPolicy: true
- policy: disallow-default-namespace
  kind: Pod
  resources:
  - product/pod-in-product
  result: pass
  isValidatingPolicy: true
